[package]
name = "rust_steam_games"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
scylla = "0.14.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }

[[bin]]
name = "import"
path = "src/import.rs"
